# picamera2_client

./: client.py  pyproject.toml
src/picamera2_client/: client.py
