[project]
name = "picamera2-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true